# kdev-agents

./: .gitignore  CLAUDE.md  README.md  kdev-sync.yml  kdev-sync.yml.example  spike-results.md
docs/: README.md  (+4 more)
plugins/kdev-cluster-x3/: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
plugins/kdev-cluster-x3/.claude-plugin/: plugin.json
plugins/kdev-cluster-x3/agents/: API自动化工程师.md  CEO视角评审员.md  E2E验收员.md  SR评审员.md  TDD实现员.md  UI自动化工程师.md  主控员.md  代码评审员.md  原型设计师.md  原型评审员.md  安全扫描员.md  安全评审员.md  实施计划师.md  审查组长.md  开发组长.md  方案设计师.md  方案设计评审员.md  架构评审员.md  测试点设计师.md  测试用例渲染员.md  测试组长.md  测试设计评审员.md  环境对齐员.md  终审聚合员.md  质量评审员.md  部署上线员.md  需求拆解师.md  需求澄清师.md  需求组长.md  需求规格师.md
plugins/kdev-cluster-x3/commands/: kdev-hud.md  kdev-start-feature.md  kdev-status.md
plugins/kdev-cluster-x3/hooks/: hooks.json  on-blocked.py  on-blocked.sh.placeholder
plugins/kdev-cluster-x3/hooks/lib/: event_router.py
plugins/kdev-cluster-x3/kdev_cluster_x3/lib/: agent_lint.py  ar_number.py  events_log.py  handoffs.py  slug.py  standards_lint.py  state_md.py
plugins/kdev-cluster-x3/kdev_cluster_x3/templates/: state.md.tpl
plugins/kdev-cluster-x3/skills/kdev-hud/: SKILL.md
plugins/kdev-cluster-x3/skills/kdev-start-feature/: SKILL.md
plugins/kdev-cluster-x3/tests/: conftest.py  test_agent_lint.py  test_ar_number.py  test_events_log.py  test_handoffs.py  test_on_blocked.py  test_skill_md_lint.py  test_slug.py  test_smoke_handoff_dry_run.py  test_standards_lint.py  test_state_md.py  test_statusline.py
plugins/kdev-code-graph/ingestor/: README.md  pyproject.toml  run.py
(+1100 files in other folders)
