[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kdev-ingestor"
version = "0.1.0"
description = "Inject kdev-secure-coding rules into Understand-Anything knowledge graphs"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
kdev-ingest = "kdev_ingestor.cli:main"

[tool.setuptools.packages.find]
include = ["kdev_ingestor*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
